--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "bcrypt": "^3.0.7",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "jest": "^24.9.0",
     "mongoose": "^5.7.13",
     "mongoose-unique-validator": "^2.0.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "supertest": "^4.0.2"
   }
 }
