--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
     "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.7.2"
   }
 }
