--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "jest": "^24.9.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "~1.9.1",
