--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@hapi/joi": "^16.1.8",
     "bcrypt": "^3.0.7",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
