--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
+    "@testing-library/dom": "^7.21.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "react": "^16.12.0",
