--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,8 @@
     "supertest": "^4.0.2"
   },
   "devDependencies": {
-    "eslint": "^6.7.2"
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
