--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,14 @@
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.42",
+    "@material-ui/styles": "^4.10.0",
     "@testing-library/dom": "^7.21.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.0"
   },
   "scripts": {
@@ -41,10 +42,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.18.3",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
