--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=ENV node index.js",
+    "start": "NODE_ENV=PROD node index.js",
+    "start-prod": "NODE_ENV=PROD node index.js",
     "test": "jest --runInBand --detectOpenHandles --forceExit"
   },
   "dependencies": {
