--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,15 +37,9 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.21.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
-    "@testing-library/dom": "^7.21.0",
-    "@testing-library/user-event": "^7.2.1",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "@testing-library/user-event": "^7.2.1"
   }
 }
